# crustly

./: .gitignore  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  CTRL_P_SHORTCUT_FIX.md  Cargo.toml  CUsersjeremDocumentsProjectscrustlyPLAN_MODE_ANALYSIS_SUMMARY.txt  DEEPSEEK_EMPTY_RESPONSE_ANALYSIS.md  DEEP_CODEBASE_ANALYSIS_WORKAROUND.md  FINAL_DIAGNOSTIC_TEST.md  FIXING_TOOL_LOOP_CODEBASE_ANALYSIS.md  FUTURE_FEATURES.md  HELP_SCREEN_PREVIEW.txt  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_RS_EVALUATION_PLAN.md  LLM_TOOL_CALLING_ISSUE.md  LM_STUDIO_GUIDE.md  LOCAL_LLM_COMPATIBILITY.md  LOCAL_LLM_TOOL_FIX.md  LOGIN_PAGE_PLAN.md  LOOP_THRESHOLD_UPDATE_2025-11-30.md  PLAN.md  PLAN_MODE_CHANGES_SUMMARY.md  PLAN_MODE_CODE_REVIEW.md  PLAN_MODE_ERROR_FIX.md  PLAN_MODE_EXECUTION_REVIEW.md  PLAN_MODE_FINAL_SOLUTION.md  PLAN_MODE_TEST_SUITE_SUMMARY.md  PLAN_MODE_TROUBLESHOOTING.md  PLAN_MODE_WORKFLOW_IMPROVEMENTS.md  PLAN_MODULE_IMPROVEMENTS_2025-11-23.md  PLAN_MODULE_REDESIGN_SUMMARY.md  PRIORITY_MATRIX.md  PROVIDER_COMPARISON_OPENAI_VS_QWEN.md  PROVIDER_IMPLEMENTATION_GUIDE.md  README.md  SESSION_SUMMARY.md  SPLASH_PREVIEW.txt  SPLASH_SCREEN_FIX.md  SPRINT_10_STATUS.md  SPRINT_11_STATUS.md  (+19 more)
.github/workflows/: ci.yml  release.yml
benches/: database.rs
doc/screenshots/: README.md
docs/: ANALYSIS_LOCAL_LLM_AND_CATWALK.md  ARCHITECTURE.md  CATWALK_SPECIFICATION.md  CRUSTLY_SPECIFICATION_FINAL.md  IMPLEMENTATION_SUMMARY.md  PLAN_MODE_USER_GUIDE.md  SPECIFICATION_REVIEW.md  architecture.puml
docs/development/: APPROVAL_SYSTEM_COMPLETE.md  APPROVAL_SYSTEM_IMPLEMENTATION.md  CODE_QUALITY_REPORT.md  GIT_COMMIT_SUMMARY.md  IMPROVEMENT_ROADMAP.md  PLAN_MODE_DESIGN.md  RENAME_SUMMARY.md  SPLASH_SCREEN_FEATURE.md  SPRINT_0_COMPLETE.md  SPRINT_11_STATUS.md  SPRINT_3_STATUS.md  SPRINT_5_PLAN.md  SPRINT_5_PROGRESS.md  SPRINT_8_COMPLETE.md  SPRINT_9_COMPLETE.md  SPRINT_9_PLAN.md  TESTING_SUMMARY.md
docs/guides/: BUILD_NOTES.md  CRABRACE_INTEGRATION.md  DEBUG_LOGGING.md  LM_STUDIO_GUIDE.md  MANUAL_TESTING_GUIDE.md  PROMPT_ANALYZER.md  QWEN_INTEGRATION.md  README_USER_GUIDE.md
docs/test-manually/: save.txt  test-plan-mod.md
migrations/: 20251028000001_initial_schema.sql
src/: error.rs  lib.rs  logging.rs  main.rs
src/app/: mod.rs
src/cli/: mod.rs
src/config/: crabrace.rs  mod.rs  secrets.rs  update.rs
src/db/: mod.rs  models.rs  retry.rs
src/db/repository/: file.rs  message.rs  mod.rs  plan.rs  session.rs
src/events/: mod.rs
src/llm/: mod.rs
src/llm/agent/: context.rs  error.rs  mod.rs  service.rs
src/llm/prompt/: mod.rs
src/llm/provider/: anthropic.rs  azure.rs  error.rs  factory.rs  mod.rs  openai.rs  qwen.rs  retry.rs  trait.rs  types.rs
src/llm/tools/: bash.rs  code_exec.rs  context.rs  doc_parser.rs  edit.rs  error.rs  glob.rs  grep.rs  http.rs  ls.rs  mod.rs  notebook.rs  plan_tool.rs  plan_tool_security_tests.rs  read.rs  registry.rs  task.rs  trait.rs  web_search.rs  write.rs
src/lsp/: mod.rs
src/macros/: mod.rs
src/mcp/: mod.rs
src/mcp/transport/: mod.rs
src/message/: mod.rs
src/services/: file.rs  message.rs  mod.rs  plan.rs  session.rs
src/sync/: mod.rs
src/tui/: app.rs  error.rs  events.rs  highlight.rs  markdown.rs  mod.rs  plan.rs  plan_tests.rs  prompt_analyzer.rs  render.rs  runner.rs  splash.rs
src/tui/components/: logo.rs  mod.rs
src/tui/components/chat/: mod.rs
src/tui/components/dialogs/: mod.rs
src/tui/pages/: mod.rs
src/tui/styles/: mod.rs
src/tui/utils/: mod.rs
src/utils/: mod.rs  retry.rs
tests/: cli_test.rs  error_scenarios_test.rs  integration_test.rs  plan_mode_integration_test.rs  streaming_test.rs
