[package]
name = "crustly"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Crustly Team"]
license = "FSL-1.1-MIT"
description = "High-performance terminal AI assistant for software development"
repository = "https://github.com/jyjeanne/crustly"
keywords = ["ai", "terminal", "assistant", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
pin-project = "1.1"

# CLI Framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"

# TUI
ratatui = { version = "0.26", features = ["all-widgets"] }
crossterm = { version = "0.27", features = ["event-stream"] }
tui-textarea = "0.4"
tui-tree-widget = "0.19"
ratatui-image = "1.0"
viuer = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
# Note: Using only sqlx to avoid libsqlite3-sys version conflict
# Note: Using native-tls on Windows to avoid aws-lc-rs CMake/NASM requirement
# refinery = { version = "0.8", features = ["sqlx"] }  # TODO: Add migrations later

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"
dirs = "5.0"
shellexpand = "3.1"

# HTTP & LLM Clients
reqwest = { version = "0.11", features = ["json", "native-tls", "stream"], default-features = false }
async-openai = { version = "0.20", optional = true }
aws-sdk-bedrockruntime = { version = "1.15", optional = true }

# Provider Registry (Crabrace - replaces Catwalk)
crabrace = { path = "../crabrace" }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
glob = "0.3"
ignore = "0.4"
which = "6.0"
shell-words = "1.1"
notify = { version = "6.1", features = ["serde"] }
git2 = "0.18"
rand = "0.8"

# Syntax & Parsing
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tree-sitter = "0.20"
pulldown-cmark = "0.9"

# LSP
tower-lsp = "0.20"
lsp-types = "0.95"

# Concurrent Data Structures
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
arc-swap = "1.6"

# Security
zeroize = { version = "1.7", features = ["derive"] }

# Profiling (optional)
pprof = { version = "0.13", features = ["flamegraph", "frame-pointer"], optional = true }

# Misc
bytes = "1.5"
mime = "0.3"
base64 = "0.21"

[dev-dependencies]
rstest = "0.18"
proptest = "1.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.34", features = ["json", "yaml"] }
tempfile = "3.9"
tokio-test = "0.4"

[features]
default = []
profiling = ["pprof"]
openai = ["async-openai"]
aws-bedrock = ["aws-sdk-bedrockruntime"]
all-llm = ["openai", "aws-bedrock"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
strip = true

[[bin]]
name = "crustly"
path = "src/main.rs"

# Benchmarks
[[bench]]
name = "database"
harness = false
path = "benches/database.rs"

# [[bench]]
# name = "llm_processing"
# harness = false
# path = "benches/llm_processing.rs"
